// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/ExpensesSummary should correctly render multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    12
     
    expenses
     totalling 
    $3,507,589,143,750,235.00
  </h1>
</div>
`;

exports[`component/ExpensesSummary should correctly render one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $3.50
  </h1>
</div>
`;
